--- a/package.json
+++ b/package.json
@@ -3,10 +3,13 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "homepage": "http://abcles.github.io/equations",
   "scripts": {
     "start": "webpack serve",
     "build:dev": "webpack --mode development --devtool inline-source-map",
-    "build:prod": "webpack --mode production"
+    "build:prod": "webpack --mode production",
+    "predeploy": "npm run build:prod",
+    "deploy": "gh-pages -d build"
   },
   "author": "",
   "license": "ISC",
@@ -17,6 +20,7 @@
     "babel-loader": "^8.2.5",
     "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.7.1",
+    "gh-pages": "^4.0.0",
     "html-webpack-plugin": "^5.5.0",
     "style-loader": "^3.3.1",
     "webpack": "^5.72.1",
